old_supbase_self_hosted/k8s/ssl/ingress-resources.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      ingress.gcp.kubernetes.io/managed-certificates: supabase-ssl-cert
      ingress.gcp.kubernetes.io/pre-shared-cert: mcrt-b64a0f11-1dda-43e7-a918-1171eade86ad
      ingress.gcp.kubernetes.io/ssl-redirect: "true"
      ingress.kubernetes.io/backends: '{"k8s-be-31525--2457aa1a2b18b336":"HEALTHY","k8s-be-31634--2457aa1a2b18b336":"HEALTHY"}'
      ingress.kubernetes.io/forwarding-rule: k8s2-fr-slqdmzes-default-supabase-kong-ssl-ingress-1snohh7f
      ingress.kubernetes.io/https-forwarding-rule: k8s2-fs-slqdmzes-default-supabase-kong-ssl-ingress-1snohh7f
      ingress.kubernetes.io/https-target-proxy: k8s2-ts-slqdmzes-default-supabase-kong-ssl-ingress-1snohh7f
      ingress.kubernetes.io/ssl-cert: mcrt-b64a0f11-1dda-43e7-a918-1171eade86ad
      ingress.kubernetes.io/target-proxy: k8s2-tp-slqdmzes-default-supabase-kong-ssl-ingress-1snohh7f
      ingress.kubernetes.io/url-map: k8s2-um-slqdmzes-default-supabase-kong-ssl-ingress-1snohh7f
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"ingress.gcp.kubernetes.io/managed-certificates":"supabase-ssl-cert","ingress.gcp.kubernetes.io/ssl-redirect":"true","kubernetes.io/ingress.global-static-ip-name":"supabase-static-ip"},"labels":{"app":"supabase"},"name":"supabase-kong-ssl-ingress","namespace":"default"},"spec":{"rules":[{"host":"api.risaboss.com","http":{"paths":[{"backend":{"service":{"name":"supabase-kong-lb","port":{"number":80}}},"path": [...]
      kubernetes.io/ingress.global-static-ip-name: supabase-static-ip
    creationTimestamp: "2025-08-09T23:36:49Z"
    finalizers:
    - networking.gke.io/ingress-finalizer-V2
    generation: 5
    labels:
      app: supabase
    name: supabase-kong-ssl-ingress
    namespace: default
    resourceVersion: "1754786407225615009"
    uid: 3ced8c9f-fa92-405a-8f1f-ed6fa663607e
  spec:
    rules:
    - host: api.risaboss.com
      http:
        paths:
        - backend:
            service:
              name: supabase-kong-lb
              port:
                number: 80
          path: /*
          pathType: ImplementationSpecific
    - host: auth.risaboss.com
      http:
        paths:
        - backend:
            service:
              name: supabase-kong-lb
              port:
                number: 80
          path: /*
          pathType: ImplementationSpecific
    - host: storage.risaboss.com
      http:
        paths:
        - backend:
            service:
              name: supabase-kong-lb
              port:
                number: 80
          path: /*
          pathType: ImplementationSpecific
    - host: realtime.risaboss.com
      http:
        paths:
        - backend:
            service:
              name: supabase-kong-lb
              port:
                number: 80
          path: /*
          pathType: ImplementationSpecific
    - host: studio.risaboss.com
      http:
        paths:
        - backend:
            service:
              name: supabase-kong-lb
              port:
                number: 80
          path: /*
          pathType: ImplementationSpecific
  status:
    loadBalancer:
      ingress:
      - ip: 34.95.114.211
kind: List
metadata:
  resourceVersion: ""
